--- a/index.html
+++ b/index.html
@@ -39,34 +39,42 @@
     <section class="banner">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 pt-100">
+          <div class="col-lg-6 col-md-12 pt-100">
             <h1 class="text-white">A Complete Line of <span class="fs-100">INDUSTRIAL</span> <br>SAFETY PRODUCTS</h1>
           </div>
-          <div class="col-lg-6 pt-5 pb-5">
+          <div class="col-lg-6 col-md-12 pt-5 pb-5">
             <div class="form-bg bg-danger px-5 py-4">
               <form>
-                <table>
-                  <tbody>
-                    <tr>
-                      <td class="text-white fw-bold">CONTACT US TODAY</td>
-                    </tr>
-                    <tr>
-                      <td><input type="text" placeholder="FIRST NAME"></td>
-                      <td><input type="text" placeholder="LAST NAME"></td>
-                    </tr>
-                    <tr>
-                      <td colspan="2"><input type="text" placeholder="COMPANY NAME"></td>
-                    </tr>
-                    <tr>
-                      <td><input type="email" placeholder="EMAIL"></td>
-                      <td><input type="text" placeholder="PHONE"></td>
-                    </tr>
-                    <tr>
-                      <td><textarea placeholder="TYPE MESSAGE HERE"></textarea></td>
-                    </tr>
-                    <tr><td colspan="2"><button type="button" class="btn btn-warning fw-semibold" style="width: 100%;">SUBMIT</button></td></tr>
-                  </tbody>
-                </table>
+                <div>
+                  <div class="row text-white fw-bold pb-3">
+                    <h4>CONTACT US TODAY</h4>
+                  </div>
+                  <div class="row pb-2">
+                    <div class="col-lg-6">
+                      <input type="text" placeholder="FIRST NAME">
+                    </div>
+                    <div class="col-lg-6">
+                      <input type="text" placeholder="LAST NAME">
+                    </div>
+                  </div>  
+                  <div class="row pb-2">
+                    <input type="text" placeholder="COMPANY NAME">
+                  </div>
+                  <div class="row pb-2">
+                    <div class="col-lg-6">
+                      <input type="email" placeholder="EMAIL">
+                    </div>
+                    <div class="col-lg-6">
+                      <input type="text" placeholder="PHONE">
+                    </div>
+                  </div>
+                  <div class="row pb-2">
+                    <textarea placeholder="TYPE MESSAGE HERE"></textarea>
+                  </div>
+                  <div class="row">
+                    <button type="button" class="btn btn-warning fw-semibold" style="width: 100%;">SUBMIT</button>
+                  </div>
+                </div>
               </form>
             </div>
           </div>
