form updation complete

--- a/index.html
+++ b/index.html
@@ -45,36 +45,30 @@
           <div class="col-lg-6 col-md-12 pt-5 pb-5">
             <div class="form-bg bg-danger px-5 py-4">
               <form>
-                <div>
-                  <div class="row text-white fw-bold pb-3">
-                    <h4>CONTACT US TODAY</h4>
-                  </div>
-                  <div class="row pb-2">
-                    <div class="col-lg-6">
-                      <input type="text" placeholder="FIRST NAME">
-                    </div>
-                    <div class="col-lg-6">
-                      <input type="text" placeholder="LAST NAME">
-                    </div>
-                  </div>  
-                  <div class="row pb-2">
-                    <input type="text" placeholder="COMPANY NAME">
-                  </div>
-                  <div class="row pb-2">
-                    <div class="col-lg-6">
-                      <input type="email" placeholder="EMAIL">
-                    </div>
-                    <div class="col-lg-6">
-                      <input type="text" placeholder="PHONE">
-                    </div>
-                  </div>
-                  <div class="row pb-2">
-                    <textarea placeholder="TYPE MESSAGE HERE"></textarea>
-                  </div>
-                  <div class="row">
-                    <button type="button" class="btn btn-warning fw-semibold" style="width: 100%;">SUBMIT</button>
-                  </div>
-                </div>
+                <table>
+                  <tbody>
+                    <tr>
+                      <td class="text-white fw-bold pb-4">CONTACT US TODAY</td>
+                    </tr>
+                    <tr>
+                      <td><input type="text" placeholder="FIRST NAME"></td>
+                      <td><input type="text" placeholder="FIRST NAME"></td>
+                    </tr>
+                    <tr>
+                      <td colspan="2"><input type="text" placeholder="COMPANY NAME"></td>
+                    </tr>
+                    <tr>
+                      <td><input type="text" placeholder="FIRST NAME"></td>
+                      <td><input type="text" placeholder="FIRST NAME"></td>
+                    </tr>
+                    <tr>
+                      <td colspan="2"><textarea placeholder="TYPE MESSAGE HERE"></textarea></textarea></td>
+                    </tr>
+                    <tr>
+                      <td colspan="2"><button type="button" class="btn btn-warning fw-semibold">SUBMIT</button></td>
+                    </tr>
+                  </tbody>
+                </table>
               </form>
             </div>
           </div>
