form updation complete

--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
     <section class="banner">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 col-md-12 pt-100">
-            <h1 class="text-white">A Complete Line of <span class="fs-100">INDUSTRIAL</span> <br>SAFETY PRODUCTS</h1>
+          <div class="col-lg-6 pt-100">
+            <h1 class="text-white fw-bold" style="font-size: 35px;"><i>A Complete Line of </i><span class="fs-100">INDUSTRIAL</span> <br>SAFETY PRODUCTS</h1>
           </div>
-          <div class="col-lg-6 col-md-12 pt-5 pb-5">
+          <div class="col-lg-6 pt-5 pb-5">
             <div class="form-bg bg-danger px-5 py-4">
               <form>
                 <table>
                   <tbody>
                     <tr>
-                      <td class="text-white fw-bold pb-4">CONTACT US TODAY</td>
+                      <td class="text-white fw-bold pb-4" style="font-size: 20px;">CONTACT US TODAY</td>
                     </tr>
                     <tr>
                       <td><input type="text" placeholder="FIRST NAME"></td>
@@ -58,8 +58,8 @@
                       <td colspan="2"><input type="text" placeholder="COMPANY NAME"></td>
                     </tr>
                     <tr>
-                      <td><input type="text" placeholder="FIRST NAME"></td>
-                      <td><input type="text" placeholder="FIRST NAME"></td>
+                      <td><input type="Email" placeholder="EMAIL"></td>
+                      <td><input type="text" placeholder="PHONE"></td>
                     </tr>
                     <tr>
                       <td colspan="2"><textarea placeholder="TYPE MESSAGE HERE"></textarea></textarea></td>
