--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
                       <td class="text-white fw-bold pb-4" style="font-size: 20px;">CONTACT US TODAY</td>
                     </tr>
                     <tr>
-                      <td><input type="text" placeholder="FIRST NAME"></td>
-                      <td><input type="text" placeholder="FIRST NAME"></td>
+                      <td style="padding-right: 5px;"><input type="text" placeholder="FIRST NAME"></td>
+                      <td><input type="text" placeholder="LAST NAME"></td>
                     </tr>
                     <tr>
                       <td colspan="2"><input type="text" placeholder="COMPANY NAME"></td>
                     </tr>
                     <tr>
-                      <td><input type="Email" placeholder="EMAIL"></td>
+                      <td style="padding-right: 5px;"><input type="Email" placeholder="EMAIL"></td>
                       <td><input type="text" placeholder="PHONE"></td>
                     </tr>
                     <tr>
