complete responsive done

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <section class="banner">
       <div class="container">
         <div class="row">
-          <div class="col-lg-6 pt-100">
-            <h1 class="text-white fw-bold" style="font-size: 35px;"><i>A Complete Line of </i><span class="fs-100">INDUSTRIAL</span> <br>SAFETY PRODUCTS</h1>
+          <div class="col-lg-6">
+            <h1 class="text-white fw-bold">A Complete Line of <span>INDUSTRIAL</span><br>SAFETY PRODUCTS</h1>
           </div>
           <div class="col-lg-6 pt-5 pb-5">
             <div class="form-bg bg-danger px-5 py-4">
